--- a/BlindBoxShop.Application/BlindBoxShop.Application.csproj
+++ b/BlindBoxShop.Application/BlindBoxShop.Application.csproj
@@ -25,6 +25,8 @@
   <ItemGroup>
     <Folder Include="Components\Account\Shared\" />
     <Folder Include="Components\Account\Pages\" />
+    <Folder Include="Pages\BlindBoxCategory\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 
 </Project>
