--- a/BlindBoxShop.Application/BlindBoxShop.Application.csproj
+++ b/BlindBoxShop.Application/BlindBoxShop.Application.csproj
@@ -7,6 +7,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Blazored.Toast" Version="4.2.1" />
+		<PackageReference Include="BootstrapBlazor" Version="8.11.0" />
+		<PackageReference Include="BootstrapBlazor.FontAwesome" Version="8.0.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.12" />
@@ -15,6 +18,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -23,6 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Interceptor\" />
 	  <Folder Include="Pages\Pages\Home\Partial\" />
 	</ItemGroup>
 
