feat: CRUD for Vouchers

--- a/BlindBoxShop.Application/appsettings.json
+++ b/BlindBoxShop.Application/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "sqlConnection": "server=.;database=BlindBoxShop; Integrated Security=true; TrustServerCertificate=true;uid=sa;pwd=sa12345"
+    "sqlConnection": "server=(local);database=BlindBoxShop; Integrated Security=true; TrustServerCertificate=true;uid=sa;pwd=123456"
   },
   "Logging": {
     "LogLevel": {
