--- a/BlindBoxShop.Shared/BlindBoxShop.Shared.csproj
+++ b/BlindBoxShop.Shared/BlindBoxShop.Shared.csproj
@@ -12,4 +12,8 @@
     <None Remove="ResponseModel\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.2.0" />
+  </ItemGroup>
+
 </Project>
