--- a/BlindBoxShop.Application/BlindBoxShop.Application.csproj
+++ b/BlindBoxShop.Application/BlindBoxShop.Application.csproj
@@ -22,6 +22,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\BlindBoxShop.Repository\BlindBoxShop.Repository.csproj" />
 		<ProjectReference Include="..\BlindBoxShop.Service\BlindBoxShop.Service.csproj" />
+		<ProjectReference Include="..\BlindBoxShop.Shared.Services\BlindBoxShop.Shared.Services.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
