delete_image_byId_and_byBlindBoxId

--- a/BlindBoxShop.Application/BlindBoxShop.Application.csproj
+++ b/BlindBoxShop.Application/BlindBoxShop.Application.csproj
@@ -27,6 +27,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Interceptor\" />
+	  <Folder Include="Pages\Admin\UserManagement\" />
 	  <Folder Include="Pages\Pages\Home\Partial\" />
 	</ItemGroup>
 
