all_review_page_and_reply_func

--- a/BlindBoxShop.Service/BlindBoxShop.Service.csproj
+++ b/BlindBoxShop.Service/BlindBoxShop.Service.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlindBoxShop.Repository.Contract\BlindBoxShop.Repository.Contract.csproj" />
+    <ProjectReference Include="..\BlindBoxShop.Repository\BlindBoxShop.Repository.csproj" />
     <ProjectReference Include="..\BlindBoxShop.Service.Contract\BlindBoxShop.Service.Contract.csproj" />
   </ItemGroup>
 
