--- a/BlindBoxShop.Service.Contract/BlindBoxShop.Service.Contract.csproj
+++ b/BlindBoxShop.Service.Contract/BlindBoxShop.Service.Contract.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlindBoxShop.Entities\BlindBoxShop.Entities.csproj" />
     <ProjectReference Include="..\BlindBoxShop.Shared\BlindBoxShop.Shared.csproj" />
   </ItemGroup>
 
